Remove confirmação dos botões interativos do TPA